--- a/Stella Studio/style.css
+++ b/Stella Studio/style.css
@@ -243,6 +243,9 @@ button {
     padding: 8px;
     font-size: 1rem;
   }
+  .menu-btn span {
+    font-size: 1.5rem;
+  }
   main,
   .white-section {
     width: 100%;
